--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourhandle/pane"
+    "url": "https://github.com/meldfunction/pane"
   },
-  "homepage": "https://yourhandle.github.io/pane"
+  "homepage": "https://meldfunction.github.io/pane"
 }
